# security

./: .gitignore  README.md  sample-demo-client-overview.docx  security-crash-course.docx  security-crash-course.pptx
.github/workflows/: ci.yml  deploy.yml
app/: .dockerignore  Dockerfile  README.md  pyproject.toml
app/src/chatbot_service/: __main__.py  config.py  main.py  rate_limiter.py  schemas.py  security.py  vertex_client.py
app/src/chatbot_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/tests/: test_main.py
docs/: architecture.md  client_briefing.docx  pipeline.md  secure_gcp_chatbot_platform_proposal.docx
infra/: README.md
infra/envs/dev/: backend.tf.example  main.tf  output.tf  terraform.tfvars.example  variables.tf
infra/envs/prod/: backend.tf.example  main.tf  terraform.tfvars.example  variables.tf
infra/global/: README.md
infra/modules/cloudbuild/: main.tf  outputs.tf  variables.tf
infra/modules/cloudrun/: main.tf  outputs.tf  variables.tf
infra/modules/gke/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/logging/: main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  outputs.tf  variables.tf
infra/modules/security/: main.tf  outputs.tf  variables.tf
infra/modules/vertex/: main.tf  outputs.tf  variables.tf
policies/opa/: storage.rego
policies/terraform-validator/: disallow_public_sql.yaml
scripts/: advanced_security_pipeline.py  security_checks.py  security_checks.sh
